--- a/comparison.html
+++ b/comparison.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Latitude</a>
+              <a class="navbar-brand" href="index.html">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -40,16 +40,18 @@
                     <a class="nav-link" href="comparison.html">Comparison</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Data</a>
+                    <a class="nav-link" href="data.html">Data</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
-
+<div class="border">
     <h1 class="h2green">Comparison: Latitude vs X</h1>
+    <hr>
+    <p>Click any plot to get a in-depth analysis</p>
     <article>
-        <h2>vs. Max Temperature</h2>
+       
     <a target="_blank" href="Resources/assets/images/Fig1.png">
       <img src="Resources/assets/images/Fig1.png" alt="Cloudy Map">
     </a>
@@ -78,7 +80,7 @@
       <figcaption><em>Wind Map</em></figcaption>
     </figure>
   </section>
-
+</div>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
