--- a/comparison.html
+++ b/comparison.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>Comparisons</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
+  <title>Latitude Comparison Data</title>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse justify-content-end"" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <!-- <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -30,10 +31,10 @@
                       Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="#">Humidity</a></li>
-                      <li><a class="dropdown-item" href="#">Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="#">Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="/comparison.html">Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="/comparison.html">Humidity</a></li>
+                      <li><a class="dropdown-item" href="/comparison.html">Cloudiness</a></li>
+                      <li><a class="dropdown-item" href="/comparison.html">Wind Speed</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
